[package]
name = "metaflac"
version = "0.1.8"
authors = ["James Hurst <jh.jameshurst@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshurst/rust-metaflac"
repository = "https://github.com/jameshurst/rust-metaflac"
documentation = "https://jameshurst.github.io/rust-metaflac"
description = "A library for reading and writing FLAC metadata."
keywords = ["flac", "audio", "parser", "metadata"]

[dependencies]
log = "0.4.6"
byteorder = "1.2.7"

[dependencies.num]
version = "0.2.0"
default-features = false
